--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mapbox/mapbox-gl-draw": "^1.3.0",
     "@mapbox/polyline": "^1.1.1",
     "@next/font": "13.1.1",
+    "@sentry/nextjs": "^7.28.1",
     "axios": "^1.2.1",
     "dayjs": "^1.11.7",
     "eslint": "8.31.0",
