--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mapbox/polyline": "^1.1.1",
     "@next/font": "13.1.1",
     "@sentry/nextjs": "^7.28.1",
+    "@vercel/analytics": "^1.0.2",
     "axios": "^1.2.1",
     "dayjs": "^1.11.7",
     "eslint": "8.31.0",
